Fix some color contrast issues

--- a/frontend/src/components/MarkdownEditor.sass
+++ b/frontend/src/components/MarkdownEditor.sass
@@ -23,7 +23,7 @@
       width: 100%
 
   .placeholder
-    color: gray
+    color: #666
     line-height: 30px
     padding-left: 10px
 
